docs: create Firebase to Supabase Auth migration plan

--- a/nginx.conf
+++ b/nginx.conf
@@ -30,7 +30,7 @@ http {
     # HTTP Server - Redirect to HTTPS
     server {
         listen 80;
-        server_name apps.ethanturk.com;
+        server_name aidocs.ethanturk.com;
 
         location / {
             return 301 https://$host$request_uri;
@@ -40,7 +40,7 @@ http {
     # HTTPS Server
     server {
         listen 443 ssl;
-        server_name apps.ethanturk.com;
+        server_name aidocs.ethanturk.com;
 
         # SSL Configuration
         ssl_certificate /etc/nginx/certs/chain.pem;
