Optimize frontend vite

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,7 +17,7 @@ AZURE_STORAGE_CONTAINER_NAME=documents
 AZURE_STORAGE_ACCOUNT_NAME=aidocsrch
 
 # Security Configuration
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,https://apps.ethanturk.com
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,https://aidocs.ethanturk.com
 MAX_FILE_SIZE=100000000
 MAX_FILES_PER_UPLOAD=10
 FIREBASE_REQUIRED=false
