--- a/docker-compose.worker.yml
+++ b/docker-compose.worker.yml
@@ -5,7 +5,7 @@ services:
     deploy:
       resources:
         limits:
-          memory: 10000M
+          memory: 2G
     environment:
       CELERY_BROKER_URL: ${CELERY_BROKER_URL:-amqp://guest:guest@192.168.5.204:5672//}  # pragma: allowlist secret
       OPENAI_API_KEY: ${OPENAI_API_KEY}
