--- a/docker-compose.frontend.yml
+++ b/docker-compose.frontend.yml
@@ -1,21 +1,22 @@
 services:
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend
+      args:
+        # Pass client-side env vars as build arguments
+        VITE_API_BASE: ${VITE_API_BASE}
+        VITE_FIREBASE_API_KEY: ${VITE_FIREBASE_API_KEY}
+        VITE_FIREBASE_AUTH_DOMAIN: ${VITE_FIREBASE_AUTH_DOMAIN}
+        VITE_FIREBASE_PROJECT_ID: ${VITE_FIREBASE_PROJECT_ID}
+        VITE_FIREBASE_STORAGE_BUCKET: ${VITE_FIREBASE_STORAGE_BUCKET}
+        VITE_FIREBASE_MESSAGING_SENDER_ID: ${VITE_FIREBASE_MESSAGING_SENDER_ID}
+        VITE_FIREBASE_APP_ID: ${VITE_FIREBASE_APP_ID}
+        VITE_BASE_PATH: ${VITE_BASE_PATH}
     hostname: frontend
     working_dir: /app
     ports:
       - "${FRONTEND_PORT:-3000}:3000"
     environment:
-      # Client-side environment variables
-      VITE_API_BASE: ${VITE_API_BASE}
-      VITE_FIREBASE_API_KEY: ${VITE_FIREBASE_API_KEY}
-      VITE_FIREBASE_AUTH_DOMAIN: ${VITE_FIREBASE_AUTH_DOMAIN}
-      VITE_FIREBASE_PROJECT_ID: ${VITE_FIREBASE_PROJECT_ID}
-      VITE_FIREBASE_STORAGE_BUCKET: ${VITE_FIREBASE_STORAGE_BUCKET}
-      VITE_FIREBASE_MESSAGING_SENDER_ID: ${VITE_FIREBASE_MESSAGING_SENDER_ID}
-      VITE_FIREBASE_APP_ID: ${VITE_FIREBASE_APP_ID}
-      VITE_BASE_PATH: ${VITE_BASE_PATH}
-
       # Optimize esbuild specifically
       ESBUILD_BINARY_PATH: "/app/node_modules/esbuild/bin/esbuild"
 
