--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,8 +1,7 @@
 {
   "$schema": "https://vercel.com/schemas/v1/config.json",
-  "buildCommand": "npm run build",
+  "buildCommand": "vite build",
   "outputDirectory": "dist",
-  "installCommand": "npm ci",
   "framework": "vite",
   "regions": ["iad1"],
   "functions": {
