--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,60 +1,8 @@
 {
   "$schema": "https://vercel.com/schemas/v1/config.json",
   "buildCommand": "npm run build",
+  "devCommand": "npm run dev",
   "outputDirectory": "dist",
-  "regions": ["iad1"],
-  "functions": {
-    "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "/api/$1"
-      }
-    ]
-  },
-  "env": {
-    "NEXT_PUBLIC_API_BASE": "@api_url",
-    "NEXT_PUBLIC_FIREBASE_API_KEY": "@firebase_api_key",
-    "NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN": "@firebase_auth_domain",
-    "NEXT_PUBLIC_FIREBASE_PROJECT_ID": "@firebase_project_id",
-    "NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET": "@firebase_storage_bucket",
-    "NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID": "@firebase_messaging_sender_id",
-    "NEXT_PUBLIC_FIREBASE_APP_ID": "@firebase_app_id"
-  },
-  "build": {
-    "env": {
-      "NEXT_PUBLIC_API_BASE": "@api_url",
-      "NEXT_PUBLIC_FIREBASE_API_KEY": "@firebase_api_key",
-      "NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN": "@firebase_auth_domain",
-      "NEXT_PUBLIC_FIREBASE_PROJECT_ID": "@firebase_project_id",
-      "NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET": "@firebase_storage_bucket",
-      "NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID": "@firebase_messaging_sender_id",
-      "NEXT_PUBLIC_FIREBASE_APP_ID": "@firebase_app_id"
-    }
-  },
-  "crons": [],
-  "headers": [
-    {
-      "source": "/api/(.*)",
-      "headers": [
-        {
-          "key": "Access-Control-Allow-Origin",
-          "value": "*"
-        },
-        {
-          "key": "Access-Control-Allow-Methods",
-          "value": "GET, POST, PUT, DELETE, OPTIONS"
-        },
-        {
-          "key": "Access-Control-Allow-Headers",
-          "value": "Content-Type, Authorization"
-        }
-      ]
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
-    }
-  ]
+  "installCommand": "npm install",
+  "regions": ["iad1"]
 }
