More vercel fixes

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://vercel.com/schemas/v1/config.json",
+  "framework": null,
   "buildCommand": "npm run build",
   "devCommand": "npm run dev",
   "outputDirectory": "dist",
