--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,13 @@
 {
   "$schema": "https://vercel.com/schemas/v1/config.json",
-  "framework": null,
   "buildCommand": "cd frontend && npm run build",
   "devCommand": "cd frontend && npm run dev",
   "installCommand": "cd frontend && npm install",
-  "outputDirectory": "frontend/dist"
+  "outputDirectory": "frontend/dist",
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/backend/api/index.py"
+    }
+  ]
 }
