--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
   "trailingSlash": false,
   "headers": [
     {
-      "source": "/assets/js/(.*).js",
+      "source": "/southhaven/assets/js/(.*).js",
       "headers": [
         {
           "key": "Content-Type",
@@ -21,7 +21,7 @@
       ]
     },
     {
-      "source": "/(.*)\\.(js)$",
+      "source": "/southhaven/(.*)\\.(js)$",
       "headers": [
         {
           "key": "Content-Type",
@@ -34,7 +34,20 @@
       ]
     },
     {
-      "source": "/assets/(.*)",
+      "source": "/southhaven/(.*)\\.(css)$",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "text/css; charset=utf-8"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/southhaven/assets/(.*)",
       "headers": [
         {
           "key": "Cache-Control",
@@ -43,7 +56,7 @@
       ]
     },
     {
-      "source": "/(.*)\\.(css|svg|png|jpg|jpeg|gif|ico|woff|woff2|ttf|eot)$",
+      "source": "/southhaven/(.*)\\.(svg|png|jpg|jpeg|gif|ico|woff|woff2|ttf|eot)$",
       "headers": [
         {
           "key": "Cache-Control",
