Fix conflicting rewrite rules in Vercel config
- Order matters: assets/specific files before catch-all
- Ensure backend routing catches API requests after asset handling
- Prevent double matching of /southhaven/:path*

--- a/vercel.json
+++ b/vercel.json
@@ -45,24 +45,8 @@
   ],
   "rewrites": [
     {
-      "source": "/southhaven/api/(.*)",
-      "destination": "/backend/api/index.py"
-    },
-    {
-      "source": "/southhaven/agent/(.*)",
-      "destination": "/backend/api/index.py"
-    },
-    {
-      "source": "/southhaven/ws",
-      "destination": "/backend/api/index.py"
-    },
-    {
-      "source": "/southhaven/sse",
-      "destination": "/backend/api/index.py"
-    },
-    {
-      "source": "/southhaven/internal/(.*)",
-      "destination": "/backend/api/index.py"
+      "source": "/southhaven/:path*",
+      "destination": "/backend/api/index.py/:path*"
     },
     {
       "source": "/southhaven/assets/:path*",
