Fix Vercel routing order
- Assets and specific files before backend catch-all
- Ensure all /southhaven routes go to backend
- Remove duplicate catch-all rule

--- a/vercel.json
+++ b/vercel.json
@@ -45,10 +45,6 @@
   ],
   "rewrites": [
     {
-      "source": "/southhaven/:path*",
-      "destination": "/backend/api/index.py/:path*"
-    },
-    {
       "source": "/southhaven/assets/:path*",
       "destination": "/assets/:path*"
     },
@@ -62,6 +58,10 @@
     },
     {
       "source": "/southhaven/:path*",
+      "destination": "/backend/api/index.py/:path*"
+    },
+    {
+      "source": "/:path*",
       "destination": "/index.html"
     }
   ]
