Simplify Vercel rewrites to minimal rules
- Single catch-all rewrite for /southhaven/* to backend
- Vercel will auto-serve static assets before rewrites
- Remove complex routing rules causing issues

--- a/vercel.json
+++ b/vercel.json
@@ -45,23 +45,11 @@
   ],
   "rewrites": [
     {
-      "source": "/southhaven/assets/:path*",
-      "destination": "/assets/:path*"
+      "source": "/southhaven/(.*)",
+      "destination": "/backend/api/index.py"
     },
     {
-      "source": "/southhaven/icon.svg",
-      "destination": "/icon.svg"
-    },
-    {
-      "source": "/southhaven/vite.svg",
-      "destination": "/vite.svg"
-    },
-    {
-      "source": "/southhaven/:path*",
-      "destination": "/backend/api/index.py/:path*"
-    },
-    {
-      "source": "/:path*",
+      "source": "/(.*)",
       "destination": "/index.html"
     }
   ]
