Exclude assets from backend rewrite
- Use negative lookahead to exclude /southhaven/assets/* from backend routing
- Static files served directly by Vercel with correct MIME types
- Only API routes go through serverless function

--- a/vercel.json
+++ b/vercel.json
@@ -45,7 +45,7 @@
   ],
   "rewrites": [
     {
-      "source": "/southhaven/(.*)",
+      "source": "/southhaven/(?!assets).*",
       "destination": "/backend/api/index.py"
     },
     {
