Disable all GitHub Actions workflows
- Add 'if: false' to all workflow files
- Using Vercel automatic deployment instead
- Prevents duplicate builds and deployments

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,8 @@ on:
     branches: [ main, develop ]
   workflow_dispatch:
 
+if: false  # Disabled - using Vercel automatic deployment
+
 permissions:
   contents: read
   pull-requests: write
