Fix asset routing with explicit exclude rule
- Add explicit rewrite for assets before backend catch-all
- Order matters: assets served directly, then backend routes
- Ensures correct MIME types for static files

--- a/vercel.json
+++ b/vercel.json
@@ -45,11 +45,15 @@
   ],
   "rewrites": [
     {
-      "source": "/southhaven/(?!assets).*",
+      "source": "/southhaven/assets/:path*",
+      "destination": "/assets/:path*"
+    },
+    {
+      "source": "/southhaven/:path*",
       "destination": "/backend/api/index.py"
     },
     {
-      "source": "/(.*)",
+      "source": "/:path*",
       "destination": "/index.html"
     }
   ]
