Add API rewrite rules without /southhaven prefix
- Rewrite /api/*, /agent/*, /sse, /ws, /internal/* to backend
- Root path serves index.html for SPA
- API routes work with both /southhaven prefix and without

--- a/vercel.json
+++ b/vercel.json
@@ -45,6 +45,26 @@
   ],
   "rewrites": [
     {
+      "source": "/api/(.*)",
+      "destination": "/backend/api/index.py"
+    },
+    {
+      "source": "/agent/(.*)",
+      "destination": "/backend/api/index.py"
+    },
+    {
+      "source": "/sse",
+      "destination": "/backend/api/index.py"
+    },
+    {
+      "source": "/ws",
+      "destination": "/backend/api/index.py"
+    },
+    {
+      "source": "/internal/(.*)",
+      "destination": "/backend/api/index.py"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
