Fix outputDirectory to frontend/dist
- Vite builds files to frontend/dist/, not southhaven subdirectory
- VITE_BASE_PATH only adds prefix to asset paths, not directory structure
- Static files now served from correct location

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "buildCommand": "cd frontend && VITE_BASE_PATH=/southhaven npm run build",
   "devCommand": "cd frontend && npm run dev",
   "installCommand": "cd frontend && npm install",
-  "outputDirectory": "frontend/dist/southhaven",
+  "outputDirectory": "frontend/dist",
   "cleanUrls": true,
   "trailingSlash": false,
   "headers": [
