--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
   "$schema": "https://vercel.com/schemas/v1/config.json",
-  "buildCommand": "cd frontend && VITE_BASE_PATH=/southhaven npm run build",
+  "buildCommand": "cd frontend && VITE_BASE_PATH=/southhaven npm run build && cd frontend/dist && mv * southhaven/ 2>/dev/null || true",
   "devCommand": "cd frontend && npm run dev",
   "installCommand": "cd frontend && npm install",
-  "outputDirectory": "frontend/dist",
+  "outputDirectory": "frontend/dist/southhaven",
   "cleanUrls": true,
   "trailingSlash": false,
   "headers": [
@@ -45,27 +45,27 @@
   ],
   "rewrites": [
     {
-      "source": "/api/(.*)",
+      "source": "/southhaven/api/(.*)",
       "destination": "/backend/api/index.py"
     },
     {
-      "source": "/agent/(.*)",
+      "source": "/southhaven/agent/(.*)",
       "destination": "/backend/api/index.py"
     },
     {
-      "source": "/sse",
+      "source": "/southhaven/sse",
       "destination": "/backend/api/index.py"
     },
     {
-      "source": "/ws",
+      "source": "/southhaven/ws",
       "destination": "/backend/api/index.py"
     },
     {
-      "source": "/internal/(.*)",
+      "source": "/southhaven/internal/(.*)",
       "destination": "/backend/api/index.py"
     },
     {
-      "source": "/(.*)",
+      "source": "/southhaven/(.*)",
       "destination": "/index.html"
     }
   ]
