--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
   "$schema": "https://vercel.com/schemas/v1/config.json",
-  "buildCommand": "cd frontend && VITE_BASE_PATH=/southhaven npm run build && mkdir -p dist/southhaven && mv dist/* dist/southhaven/ 2>/dev/null || true",
+  "buildCommand": "cd frontend && npm run build",
   "devCommand": "cd frontend && npm run dev",
   "installCommand": "cd frontend && npm install",
-  "outputDirectory": "frontend/dist/southhaven",
+  "outputDirectory": "frontend/dist",
   "cleanUrls": true,
   "trailingSlash": false,
   "headers": [
@@ -45,27 +45,23 @@
   ],
   "rewrites": [
     {
-      "source": "/southhaven/api/(.*)",
+      "source": "/agent/:path*",
       "destination": "/backend/api/index.py"
     },
     {
-      "source": "/southhaven/agent/(.*)",
+      "source": "/sse",
       "destination": "/backend/api/index.py"
     },
     {
-      "source": "/southhaven/sse",
+      "source": "/ws",
       "destination": "/backend/api/index.py"
     },
     {
-      "source": "/southhaven/ws",
+      "source": "/internal/:path*",
       "destination": "/backend/api/index.py"
     },
     {
-      "source": "/southhaven/internal/(.*)",
-      "destination": "/backend/api/index.py"
-    },
-    {
-      "source": "/southhaven/(.*)",
+      "source": "/(.*)",
       "destination": "/index.html"
     }
   ]
