--- a/vercel.json
+++ b/vercel.json
@@ -43,22 +43,27 @@
       ]
     }
   ],
+  "functions": {
+    "api/index.py": {
+      "includeFiles": "backend/**"
+    }
+  },
   "rewrites": [
     {
       "source": "/agent/:path*",
-      "destination": "/backend/api/index.py"
+      "destination": "/api/index.py"
     },
     {
       "source": "/sse",
-      "destination": "/backend/api/index.py"
+      "destination": "/api/index.py"
     },
     {
       "source": "/ws",
-      "destination": "/backend/api/index.py"
+      "destination": "/api/index.py"
     },
     {
       "source": "/internal/:path*",
-      "destination": "/backend/api/index.py"
+      "destination": "/api/index.py"
     },
     {
       "source": "/(.*)",
