Revert "Update gitignore"
This reverts commit 927e64aae9a2449b3a438f3f23552f3f76891bec.

--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,8 @@ dist/
 downloads/
 eggs/
 .eggs/
-/lib/
-/lib64/
+lib/
+lib64/
 parts/
 sdist/
 var/
@@ -142,3 +142,6 @@ traefik/acme/
 traefik/logs/
 .vercel
 .env*.local
+
+# Exception for frontend library
+!frontend/src/lib/
