feat: Refactor backend for serverless deployment
- Created a shared common layer in `backend/common/` for configuration, dependencies, and models.
- Developed domain-specific applications: `agent_app.py`, `documents_app.py`, `summaries_app.py`, and `notifications_app.py`.
- Implemented a queue service abstraction layer to replace Celery with AWS SQS and Azure Queue Storage support.
- Updated file upload and summarization endpoints to trigger queue tasks.
- Added health check endpoints for each service.
- Created separate requirements files for each function to optimize dependencies for serverless deployment.
- Implemented tests for common utilities and queue service.
- Updated Vercel routing configuration to direct requests to the appropriate API endpoints.
- Removed unsupported WebSocket and SSE endpoints, along with Celery dependencies.

--- a/vercel.json
+++ b/vercel.json
@@ -49,24 +49,64 @@
       "destination": "/api/index.py"
     },
     {
-      "source": "/agent/:path*",
-      "destination": "/api/index.py"
+      "source": "/agent/sync",
+      "destination": "/api/agent/index.py"
     },
     {
-      "source": "/sse",
-      "destination": "/api/index.py"
+      "source": "/agent/search",
+      "destination": "/api/agent/index.py"
+    },
+    {
+      "source": "/agent/async",
+      "destination": "/api/agent/index.py"
+    },
+    {
+      "source": "/agent/status/:path*",
+      "destination": "/api/agent/index.py"
+    },
+    {
+      "source": "/agent/upload",
+      "destination": "/api/documents/index.py"
+    },
+    {
+      "source": "/agent/documents",
+      "destination": "/api/documents/index.py"
+    },
+    {
+      "source": "/agent/documentsets",
+      "destination": "/api/documents/index.py"
+    },
+    {
+      "source": "/agent/documents/:path*",
+      "destination": "/api/documents/index.py"
+    },
+    {
+      "source": "/agent/files/:path*",
+      "destination": "/api/documents/index.py"
+    },
+    {
+      "source": "/agent/summaries",
+      "destination": "/api/summaries/index.py"
+    },
+    {
+      "source": "/agent/summary_qa",
+      "destination": "/api/summaries/index.py"
+    },
+    {
+      "source": "/agent/search_qa",
+      "destination": "/api/summaries/index.py"
+    },
+    {
+      "source": "/agent/summarize",
+      "destination": "/api/summaries/index.py"
     },
     {
       "source": "/poll",
-      "destination": "/api/index.py"
+      "destination": "/api/notifications/index.py"
     },
     {
-      "source": "/ws",
-      "destination": "/api/index.py"
-    },
-    {
-      "source": "/internal/:path*",
-      "destination": "/api/index.py"
+      "source": "/internal/notify",
+      "destination": "/api/notifications/index.py"
     },
     {
       "source": "/:path*",
