Implement optimize-serverless-dependencies: Split function-specific minimal dependencies
- Create function-specific requirements.txt files for all 4 serverless functions
- Refactor common module with lazy firebase imports for optional auth
- Isolate each function with minimal models.py and service.py wrappers
- Update Vercel .vercelignore to exclude heavy backend files
- Update SERVERLESS_DEPLOYMENT.md with minimal dependency architecture
- Mark all tasks as completed in tasks.md

Changes:
- api/agent/: requirements.txt, models.py, service.py, index.py
- api/documents/: requirements.txt, models.py, service.py, index.py
- api/summaries/: requirements.txt, models.py, service.py, index.py
- api/notifications/: requirements.txt, models.py, service.py, index.py
- backend/common/: lazy import pattern for firebase-admin
- api/.vercelignore: exclude unnecessary backend files from deployment
- backend/SERVERLESS_DEPLOYMENT.md: update with minimal dependency docs

This resolves the 250MB unzipped size limit error by ensuring each function
only loads its necessary dependencies (pydantic-ai, litellm, supabase,
azure-storage-blob, fastapi) instead of all backend deps (docling,
pandas, celery, redis).

--- a/api/.vercelignore
+++ b/api/.vercelignore
@@ -15,3 +15,10 @@ scripts
 docs
 *.md
 .github
+# Exclude backend source code (only common/ and services/ needed for shared logic)
+backend/async_tasks.py
+backend/backend_app.py
+backend/test_*.py
+backend/tests
+# Exclude heavy files from deployment
+backend/scripts
