--- a/backend/requirements-vercel.txt
+++ b/backend/requirements-vercel.txt
@@ -1,26 +1,6 @@
 # Minimal dependencies for Vercel serverless deployment
-# Only includes what's needed for read-only API endpoints
-
-# Core web framework
-fastapi
-mangum
-sse-starlette==2.1.3
-
-# LLM and agent framework
-pydantic-ai
-langchain-openai
-langchain-text-splitters
-litellm
-
-# Database and storage
-supabase
-azure-storage-blob>=12.20.0
-firebase-admin
-
-# Utilities
-python-dotenv
-httpx
-nest_asyncio
+# This is a reference only - each function has its own requirements.txt
+# See api/{agent,documents,summaries,notifications}/requirements.txt
 
 # Note: Heavy dependencies removed for fast builds
 # - docling[vlm]: Not needed (no document ingestion on serverless)
@@ -29,3 +9,5 @@ nest_asyncio
 # - pytest*: Not needed (test dependencies)
 # - uvicorn: Not needed (Mangum handles ASGI)
 # - watchdog: Not needed (no file watching)
+# - langchain*: Replaced with pydantic-ai + litellm
+# - sse-starlette: Not needed (no SSE endpoints in serverless)
