Remove cffi and pin azure-storage-blob to fix Vercel build
- Remove cffi from all requirements (transitive deps will install it)
- Pin azure-storage-blob to 12.19.0 (stable version)
- Keep litellm for embeddings support in agent function

This addresses the _cffi_backend.so ENOENT error by using
package versions with better Python 3.12 compatibility.

--- a/api/documents/requirements.txt
+++ b/api/documents/requirements.txt
@@ -2,8 +2,6 @@
 # Used for file upload, document listing, and file proxy
 fastapi
 supabase
-azure-storage-blob>=12.20.0
+azure-storage-blob==12.19.0
 mangum
 python-dotenv
-# System dependencies (for transitive packages)
-cffi
