--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "$schema": "https://vercel.com/schemas/v1/config.json",
-  "buildCommand": "cd frontend && npm run build",
-  "devCommand": "cd frontend && npm run dev",
-  "installCommand": "cd frontend && npm install",
+  "buildCommand": "npm run build",
+  "devCommand": "vercel dev",
+  "installCommand": "npm install",
   "outputDirectory": "frontend/dist",
   "cleanUrls": true,
   "trailingSlash": false,
@@ -45,68 +45,64 @@
   ],
   "rewrites": [
     {
-      "source": "/api/:path*",
-      "destination": "/api/index.py"
-    },
-    {
       "source": "/agent/sync",
-      "destination": "/api/agent/index.py"
+      "destination": "/api/agent/index.ts"
     },
     {
       "source": "/agent/search",
-      "destination": "/api/agent/index.py"
+      "destination": "/api/agent/index.ts"
     },
     {
       "source": "/agent/async",
-      "destination": "/api/agent/index.py"
+      "destination": "/api/agent/index.ts"
     },
     {
       "source": "/agent/status/:path*",
-      "destination": "/api/agent/index.py"
+      "destination": "/api/agent/index.ts"
     },
     {
       "source": "/agent/upload",
-      "destination": "/api/documents/index.py"
+      "destination": "/api/documents/index.ts"
     },
     {
       "source": "/agent/documents",
-      "destination": "/api/documents/index.py"
+      "destination": "/api/documents/index.ts"
     },
     {
       "source": "/agent/documentsets",
-      "destination": "/api/documents/index.py"
+      "destination": "/api/documents/index.ts"
     },
     {
       "source": "/agent/documents/:path*",
-      "destination": "/api/documents/index.py"
+      "destination": "/api/documents/index.ts"
     },
     {
       "source": "/agent/files/:path*",
-      "destination": "/api/documents/index.py"
+      "destination": "/api/documents/index.ts"
     },
     {
       "source": "/agent/summaries",
-      "destination": "/api/summaries/index.py"
+      "destination": "/api/summaries/index.ts"
     },
     {
       "source": "/agent/summary_qa",
-      "destination": "/api/summaries/index.py"
+      "destination": "/api/summaries/index.ts"
     },
     {
       "source": "/agent/search_qa",
-      "destination": "/api/summaries/index.py"
+      "destination": "/api/summaries/index.ts"
     },
     {
       "source": "/agent/summarize",
-      "destination": "/api/summaries/index.py"
+      "destination": "/api/summaries/index.ts"
     },
     {
       "source": "/poll",
-      "destination": "/api/notifications/index.py"
+      "destination": "/api/notifications/index.ts"
     },
     {
       "source": "/internal/notify",
-      "destination": "/api/notifications/index.py"
+      "destination": "/api/notifications/index.ts"
     },
     {
       "source": "/:path*",
