--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
   "$schema": "https://vercel.com/schemas/v1/config.json",
+  "buildCommand": "cd frontend && npm install && npm run build",
+  "outputDirectory": "frontend/dist",
   "devCommand": "vercel dev",
   "installCommand": "npm install",
   "cleanUrls": true,
@@ -64,6 +66,10 @@
     {
       "source": "/internal/notify",
       "destination": "/api/notifications/index.ts"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
