Add unit tests for Node.js serverless functions
- Add 49 unit tests for agent, summaries, documents APIs
- Fix TypeScript errors in supabase.ts (use getSupabase() consistently)
- Update lint script to include Node.js files
- Update README with test documentation
- Update tasks.md to mark tests complete

--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "dev": "vercel dev",
     "build": "tsc",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint backend-nodejs api/*/index.ts",
-    "lint:fix": "eslint backend-nodejs api/*/index.ts --fix",
-    "format": "prettier --write \"backend-nodejs/**/*.ts\" \"api/*/index.ts\"",
-    "format:check": "prettier --check \"backend-nodejs/**/*.ts\" \"api/*/index.ts\"",
+    "lint": "eslint \"backend-nodejs/**/*.ts\" \"api/*/index.ts\"",
+    "lint:fix": "eslint \"backend-nodejs/**/*.ts\" \"api/*/index.ts\" --fix",
+    "format": "prettier --write \"backend-nodejs/**/*.ts\" \"api/**/*.ts\"",
+    "format:check": "prettier --check \"backend-nodejs/**/*.ts\" \"api/**/*.ts\"",
     "test": "vitest run",
     "test:watch": "vitest watch"
   },
