--- a/worker/requirements.txt
+++ b/worker/requirements.txt
@@ -1,27 +1,29 @@
-langchain-openai
-pydantic-ai
-nest_asyncio
+# Core Worker Dependencies
+# For Celery workers handling async tasks (document ingestion, summarization, etc.)
+
+# Task Queue
 celery[redis]>=5.3.0
 redis>=5.0.0
-firebase-admin
-python-dotenv
-fastapi
-sse-starlette==2.1.3
-uvicorn
+
+# LLM & AI Frameworks
+langchain-openai
 langchain-text-splitters
-watchdog
+pydantic-ai
+litellm
+
+# Document Processing
 docling[vlm]
 pypdfium2
 pandas
 xlrd
 openpyxl
-httpx
-pytest
-pytest-asyncio
-pytest-mock
-pytest-cov
-litellm
+
+# Storage Clients
 supabase
 azure-storage-blob>=12.20.0
-mangum
-uvicorn[standard]
+
+# Utilities
+httpx                 # HTTP client for webhooks
+watchdog             # File monitoring
+nest_asyncio         # Async compatibility
+python-dotenv        # Environment variables
