Implement Azure Queue Service and async worker
- Enhance AzureQueueService with dynamic queue naming based on CLIENT_ID
- Add message size validation and retry logic with exponential backoff
- Implement async worker (queue_worker.py) with queue polling loop
- Add task handlers for ingestion and summarization
- Implement NotificationService for webhook notifications
- Create systemd service template and installation script
- Add .env.worker.example with all required configuration
- Create comprehensive deployment guide (WORKER_DEPLOYMENT.md)
- Update AGENTS.md with worker service documentation
- Update tasks.md to mark all items as completed

--- a/worker/requirements.txt
+++ b/worker/requirements.txt
@@ -21,6 +21,7 @@ openpyxl
 # Storage Clients
 supabase
 azure-storage-blob>=12.20.0
+azure-storage-queue>=12.20.0
 
 # Utilities
 httpx                 # HTTP client for webhooks
