--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
-  "buildCommand": "npm run build",
-  "installCommand": "npm install",
-  "rootDirectory": "frontend",
+  "buildCommand": "cd frontend && npm run build",
+  "installCommand": "npm install --prefix frontend && npm install",
   "rewrites": [
     {
       "source": "/agent/summaries",
