--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "installCommand": "npm install && cd frontend && npm install",
   "buildCommand": "cd frontend && npm run build && cp -r .next public ../",
   "rewrites": [
     {
