--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "installCommand": "npm install && cd frontend && npm install",
-  "buildCommand": "cd frontend && npm run build && cp -r .next public ../",
+  "buildCommand": "cd frontend && npm run build && cp -r .next public node_modules ../",
   "rewrites": [
     {
       "source": "/agent/summaries",
