--- a/package.json
+++ b/package.json
@@ -2,23 +2,9 @@
   "name": "python-agents",
   "version": "1.0.0",
   "private": true,
-  "packageManager": "npm@10.9.0",
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
-  "scripts": {
-    "dev": "turbo run dev",
-    "build": "turbo run build",
-    "lint": "turbo run lint",
-    "typecheck": "turbo run typecheck",
-    "test": "turbo run test",
-    "clean": "turbo run clean"
-  },
-  "devDependencies": {
-    "turbo": "^2.4.0"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+  "dependencies": {
+    "next": "^16.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
