--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
-  "installCommand": "npm install",
-  "buildCommand": "turbo run build --filter=web",
+  "installCommand": "cd apps/web && npm install",
+  "buildCommand": "cd apps/web && npm run build",
   "outputDirectory": "apps/web/.next",
   "framework": "nextjs",
   "rewrites": [
