--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,23 +58,26 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
+
+      - name: Set up pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9.0.0
 
       - name: Install dependencies
         run: |
           cd frontend
-          npm ci
+          pnpm install
 
       - name: Run ESLint
         run: |
           cd frontend
-          npm run lint
+          pnpm run lint
 
       - name: Run tests
         run: |
           cd frontend
-          npm test -- --run
+          pnpm test -- --run
 
   # Integration tests (with containers)
   integration-tests:
