--- a/.github/workflows/vercel-frontend-deploy.yml
+++ b/.github/workflows/vercel-frontend-deploy.yml
@@ -25,26 +25,29 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
+
+      - name: Set up pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9.0.0
 
       - name: Install dependencies
         run: |
           cd frontend
-          npm ci --production=false --prefer-offline --no-audit
+          pnpm install --frozen-lockfile=false
 
       - name: Run tests
         run: |
           cd frontend
-          npm test -- --run
+          pnpm test -- --run
 
       - name: Build application
         run: |
           cd frontend
-          npm run build
+          pnpm run build
 
       - name: Install Vercel CLI
-        run: npm install --global vercel@latest
+        run: pnpm install --global vercel@latest
 
       - name: Deploy to Vercel
         id: deploy
