--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,7 +5,7 @@
   "description": "Node.js serverless backend for python-agents",
   "type": "module",
   "scripts": {
-    "dev": "vercel dev",
+    "dev": "pnpm run typecheck && echo 'Backend serverless - use Vercel preview for testing'",
     "build": "tsc",
     "typecheck": "tsc --noEmit",
     "lint": "eslint \"api/**/*.ts\" \"api/*/index.ts\"",
@@ -17,8 +17,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
-    "@repo/eslint-config": "*",
-    "@repo/typescript-config": "*",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@types/node": "^20.10.0",
     "@types/sql.js": "^1.4.9",
     "@typescript-eslint/eslint-plugin": "^8.52.0",
@@ -44,7 +44,8 @@
     "openai": "^4.20.0",
     "pino": "^8.17.0",
     "pino-pretty": "^10.2.0",
-    "sql.js": "^1.10.0"
+    "sql.js": "^1.10.0",
+    "zod": "^3.23.8"
   },
   "engines": {
     "node": ">=18.0.0"
