--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "npx eslint . --fix",
+    "lint": "eslint . --fix",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
