--- a/package.json
+++ b/package.json
@@ -2,9 +2,20 @@
   "name": "python-agents",
   "version": "1.0.0",
   "private": true,
-  "dependencies": {
-    "next": "^16.1.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+  "packageManager": "pnpm@9.0.0",
+  "scripts": {
+    "dev": "turbo run dev",
+    "build": "turbo run build",
+    "lint": "turbo run lint",
+    "typecheck": "turbo run typecheck",
+    "test": "turbo run test",
+    "clean": "turbo run clean && rm -rf .turbo node_modules pnpm-lock.yaml"
+  },
+  "devDependencies": {
+    "turbo": "^2.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "pnpm": ">=9.0.0"
   }
 }
